# top-down-game-sfml

./: CMakeLists.txt  README.md
src/: application.cpp  application.h
src/objects/: bullet.cpp  bullet.h  entity.cpp  entity.h  player.cpp  player.h  zombie.cpp  zombie.h
src/states/: game_state.cpp  game_state.h  state.cpp  state.h  title_state.cpp
src/utils/: resource_identifiers.h
